[package]
name = "ans-types"
description = "Shared types for the Agent Name Service (ANS) ecosystem"
keywords = ["ans", "types", "agent-name-service"]
categories = ["data-structures"]
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[lints]
workspace = true

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Cryptography (for fingerprint)
sha2 = { workspace = true }
hex = { workspace = true }
subtle = { workspace = true }

# Utilities
chrono = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
